<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/MviBackgroundColor"
	android:padding="10dp"
	tools:context=".MainActivity">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/alert_message_dialog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:background="@drawable/alert_dialog_box"
		android:minHeight="80dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/alert_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="start"
			android:padding="5dp"
			android:text="@string/alert"
			android:textColor="@color/MviBlackColor"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/alert_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="10dp"
			android:textColor="@color/MviBlackColor"
			android:textSize="16sp"
			app:layout_constraintBottom_toTopOf="@+id/close_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/alert_title" />

		<Button
			android:id="@+id/close_button"
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:background="@drawable/button_background"
			android:text="@string/close"
			android:textColor="@color/MviWhiteColor"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/alert_message" />

	</android.support.constraint.ConstraintLayout>

	<Button
		android:id="@+id/start_button"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@drawable/button_background"
		android:text="@string/start"
		android:textColor="@color/MviWhiteColor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/alert_message_dialog" />

	<Button
		android:id="@+id/stop_button"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@drawable/button_background"
		android:text="@string/stop"
		android:textColor="@color/MviWhiteColor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/start_button" />

	<Button
		android:id="@+id/reset_button"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@drawable/button_background"
		android:text="@string/reset"
		android:textColor="@color/MviWhiteColor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/stop_button" />

	<android.support.constraint.ConstraintLayout
		android:layout_width="300dp"
		android:layout_height="300dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<android.support.constraint.Guideline
			android:id="@+id/v_guide"
			android:layout_width="1dp"
			android:layout_height="1dp"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.5"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<android.support.constraint.Guideline
			android:id="@+id/h_guide"
			android:layout_width="1dp"
			android:layout_height="1dp"
			android:orientation="horizontal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.5"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.fm.mvi.widget.MonitoringStateImageImageView
			android:id="@+id/indicator_stopped"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/stop_state"
			app:layout_constraintBottom_toTopOf="@id/h_guide"
			app:layout_constraintEnd_toStartOf="@id/v_guide"
			app:state="stopped" />

		<com.fm.mvi.widget.MonitoringStateImageImageView
			android:id="@+id/indicator_init"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/init_state"
			app:layout_constraintBottom_toTopOf="@id/h_guide"
			app:layout_constraintStart_toEndOf="@id/v_guide"
			app:state="initializing" />

		<com.fm.mvi.widget.MonitoringStateImageImageView
			android:id="@+id/indicator_started"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/start_state"
			app:layout_constraintStart_toEndOf="@id/v_guide"
			app:layout_constraintTop_toBottomOf="@id/h_guide"
			app:state="started" />

		<com.fm.mvi.widget.MonitoringStateImageImageView
			android:id="@+id/indicator_alert"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/alert_state"
			app:layout_constraintEnd_toStartOf="@id/v_guide"
			app:layout_constraintTop_toBottomOf="@id/h_guide"
			app:state="alert" />

		<com.fm.mvi.widget.MonitoringStateImageImageView
			android:id="@+id/indicator_stub"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/stub_state"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:state="unknown" />

		<com.fm.mvi.widget.MonitoringStateImageImageView
			android:id="@+id/indicator_error"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/error_state"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:state="error" />

	</android.support.constraint.ConstraintLayout>

	<TextView
		android:id="@+id/current_state"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="10dp"
		android:textColor="@color/MviBlackColor"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>